--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             <input type="text">
         </div>
         <div class="row">
-            <button class="number" id="clearbtn">c</button>
-            <button class="number">b</button>
-            <button class="number">d</button>
+            <button class="number" id="clearbtn">clear</button>
             <button class="number">/</button>
         </div>
         <div class="row">
